Fix for bug in Griddle v0.2.2
Caused layout breakage in latest webkit builds due to changes in browser handling of inline-block. More info: https://github.com/necolas/griddle/issues/16

git-svn-id: http://textpattern.googlecode.com/svn/development/4.x@5439 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/theme/classic/textpattern.css
+++ b/textpattern/theme/classic/textpattern.css
@@ -65,7 +65,7 @@ html {
 	/* ensure consistent default alignment */
 	text-align: left;
 	/* remove inter-unit whitespace for all non-monospace font-families */
-	letter-spacing: -0.31em;
+	letter-spacing: -0.34em;
 	/* protect against WebKit bug with optimizelegibility */
 	text-rendering: optimizespeed;
 }
