--- a/textpattern/theme/hive/css/textpattern.css
+++ b/textpattern/theme/hive/css/textpattern.css
@@ -66,7 +66,7 @@ html {
   /* ensure consistent default alignment */
   text-align: left;
   /* remove inter-unit whitespace for all non-monospace font-families */
-  letter-spacing: -.31em;
+  letter-spacing: -.34em;
   /* protect against WebKit bug with optimizelegibility */
   text-rendering: optimizespeed;
 }
